src/objects/Shop__c.object
<CustomObject>
    <fields>
        <fullName>Annual_Revenue__c</fullName>
        <label>Annual Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Corporation__c</fullName>
        <label>Corporation</label>
        <referenceTo>Corporation__c</referenceTo>
        <relationshipLabel>Shop</relationshipLabel>
        <relationshipName>Shop</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Director</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Shop</relationshipLabel>
        <relationshipName>Shop</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Monthly_Revenue__c</fullName>
        <label>Monthly Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Shop_Image__c</fullName>
        <formula>IMAGE(&quot;/cunning-fox-2asnae-dev-ed--c.documentforce.com/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=0683V000003Ihlg&amp;operationContext=CHATTER&amp;contentId=05T3V00000D12kA&quot;, &quot;shop image&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shop Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shop_website__c</fullName>
        <description>Shop website</description>
        <label>Shop website</label>
        <type>Url</type>
    </fields>
    <label>Shop</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Shops</fullName>
        <columns>NAME</columns>
        <columns>Monthly_Revenue__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Mine</filterScope>
        <label>My Shops</label>
    </listViews>
    <listViews>
        <fullName>Rich_Web_Shop</fullName>
        <columns>NAME</columns>
        <columns>Corporation__c</columns>
        <columns>Monthly_Revenue__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Monthly_Revenue__c</field>
            <operation>greaterOrEqual</operation>
            <value>10000</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Shop__c.Web_shop</value>
        </filters>
        <label>Rich Web Shop</label>
    </listViews>
    <nameField>
        <label>Shop Name</label>
        <type>Text</type>
    </nameField>
    <recordTypes>
        <fullName>Supermarket</fullName>
        <active>true</active>
        <description>Record type for supermarkets</description>
        <label>Supermarket</label>
    </recordTypes>
    <recordTypes>
        <fullName>Web_shop</fullName>
        <active>true</active>
        <description>Record type for internet web shops</description>
        <label>Web shop</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Director_must_present</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Director__c )</errorConditionFormula>
        <errorDisplayField>Director__c</errorDisplayField>
        <errorMessage>Director field should not be empty</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Monthly_Revenue</fullName>
        <active>true</active>
        <description>Monthly Revenue must be greater 0</description>
        <errorConditionFormula>Monthly_Revenue__c &lt;= 0</errorConditionFormula>
        <errorMessage>Monthly Revenue must be greater 0</errorMessage>
    </validationRules>
</CustomObject>